# safe-signer

./: .env.example  .gitignore  .gitmodules  LICENSE.md  README.md
transaction_builder/: foundry.toml
transaction_builder/script/: Base.s.sol  output.txt
transaction_builder/script/examples/: approveUsdc.s.sol
transaction_builder/script/utils/: Constants.sol  SafeTransactionBuilder.sol
transaction_signer/: config_transaction_signer.toml  main.py  pyproject.toml  signatures.txt
transaction_signer/data/: constants.toml
transaction_signer/src/: eip712_typed_data.py  safe_transaction.py  tenderly.py  user_input.py
transaction_signer/src/utils/: signatures.py  validate_config.py  validate_signer.py
transaction_signer/src/wallets/: hot_wallet.py  ledger_nano.py  trezor_1.py  trezor_t.py
transaction_signer/tests/: conftest.py  helpers.py  test_eip712_typed_data.py  test_hot_wallet.py  test_ledger_nano.py  test_safe_transaction.py  test_signature_loading.py  test_signature_sorting.py  test_tenderly.py  test_trezor_1.py  test_trezor_t.py  test_user_input.py  test_validate_config.py  test_validate_signer.py
transaction_signer/utils/: eip712.py  tenderly.py  validate_user_input.py
transaction_signer/wallets/: hot_wallet.py  trezor_t.py
