[tool.poetry]
name = "transaction_signer"
version = "0.1.0"
description = ""
authors = ["Thomas Smets <thomas@arcadia.finance>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.6"
inquirer = "3.4.0"
toml = "0.10.2"
eth-abi = "5.1.0"
eth-keys = "0.5.1"
python-dotenv = "1.0.1"
ledgerblue = "0.1.54"
trezor = "0.13.9"
web3 = "7.4.0"
ipykernel = "6.29.5"
ruff = "0.5.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
