[project]
name = "transaction-signer"
version = "0.1.0"
description = ""
authors = [{name = "Thomas Smets", email = "thomas@arcadia.finance"}]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "eth-abi>=5.2.0",
    "eth-keys>=0.7.0",
    "inquirer>=3.4.1",
    "ipykernel>=7.2.0",
    "ledgerblue>=0.1.56",
    "python-dotenv>=1.2.2",
    "toml>=0.10.2",
    "trezor>=0.13.10,<0.20.0",
    "web3>=7.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
